--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,51 +1,91 @@
 .task1 .item {
+  position: absolute;
+  left: 200px;
+  bottom: 150px;
 }
 
 .task2 .item {
+  position: absolute;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
+
 }
 
 .task3 .item {
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .container4 {
+  position: relative;
 }
 
 .task4 {
   width: 1000px;
 }
 .task4 .item {
+  position: sticky;
+  bottom: 300px;
+  left: calc(50% - 40px);
 }
 
 .task5 .item1 {
+  position: absolute;
   background-color: red;
+  top: 20px;
+  left: 20px;
+  z-index: 1;
 }
 .task5 .item2 {
+  position: absolute;
+  top: 40px;
+  left: 40px;
 }
 .task5 .item3 {
+  position: absolute;
   background-color: green;
+  z-index: 3;
+  top: 0;
+  left: 0;
 }
 
 .task6 .item {
+  float: left;
 }
 
 .task7 .item {
+  float: right;
 }
 
 .task8 .item1 {
+  float: none;
 }
 .task8 .item2 {
+  position: absolute;
   height: 120px;
+  top: 0;
+  right: 0;
 }
 
 .task8 p {
+  position: absolute;
+  bottom: 60px;
+  clear: both;
 }
 
 .task9 .item1 {
   height: 200px;
+  float: left;
 }
 .task9 .item2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  
 }
 .task9 p {
+  clear: right;
 }
 
 .task10 .item1 {
