--- a/public/css/index.css
+++ b/public/css/index.css
@@ -69,8 +69,7 @@
 }
 
 .task8 p {
-  position: absolute;
-  bottom: 60px;
+  margin-top: 50px;
   clear: both;
 }
 
@@ -79,80 +78,100 @@
   float: left;
 }
 .task9 .item2 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  
+ position: absolute;
+ top: 0;
+ right: 0;
 }
 .task9 p {
   clear: right;
+  padding-top: 100px;
 }
 
 .task10 .item1 {
+  float: none;
+  
 }
 .task10 .item2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  float: right;
 }
 .task10 p {
+  clear: left;
 }
 
 .task11 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .task12 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .task13 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: fill;
 }
 
 .task14 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: scale-down;
 }
 
 .task15 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: center right;
 }
 
 .task16 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: top left;
 }
 
 .task17 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: bottom center;
 }
 
 .task18 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: 40px 25px;
 }
 
 .task19 .img-item {
   height: 100%;
   width: 100%;
   object-fit: none;
+  object-position: 50%;
 }
 
 .task20 {
+  user-select: none;
 }
 
 .task21 {
+  user-select: auto;
 }
 
 .task22 {
+  caret-color: blue;
 }
 
 html {
+  scroll-behavior: smooth;
 }
